increase width to stop iphone wrapping

--- a/client/css/main.less
+++ b/client/css/main.less
@@ -320,7 +320,7 @@ button {
     border-radius  : 0;
     font-size      : 1rem;
     pointer-events : none;
-    max-width      : 30%;
+    max-width      : 60%;
     overflow       : hidden;
     text-align     : center;
     margin         : 0;
